Fixed verse size not matching, and fixed some songs crashing the program
Due to the same issue that Reveal js seems to copy the classes from the section to the background so it was thinking there was content when there wasn't. (Messed up the doesContentFit function)

--- a/openlp/core/display/html/display.css
+++ b/openlp/core/display/html/display.css
@@ -28,7 +28,7 @@ sup {
   max-height: 100%;
 }
 
-.reveal .slides > .text-slides {
+.reveal .slides > section.text-slides {
   /* Need to override reveal styles to use our text aligment */
   display: flex !important;
   flex-direction: column;
